force-app/zurich-base/main/default/objects/Relationship__c/Relationship__c.object-meta.xml
<CustomObject>
    <description>OCS</description>
    <label>Relationship</label>
    <nameField>
        <displayFormat>REL-{000000000}</displayFormat>
        <label>Relationship number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>