force-app/zurich-base/main/default/objects/Relationship__c/fields/ClaimId__c.field-meta.xml
<CustomField>
    <fullName>ClaimId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(OCS) Identifica el Siniestro</description>
    <label>Claim</label>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>