force-app/zurich-base/main/default/objects/Relationship__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <description>Dependiendo del Record Type, se muestra el link al registro correspondiente</description>
    <formula>CASE( RecordType.DeveloperName , 
&quot;Policy&quot; , HYPERLINK(&quot;/&quot; &amp; PolicyId__c,  PolicyId__r.Name ), 
&quot;Offer&quot; , HYPERLINK(&quot;/&quot; &amp;  OpportunityId__c ,   OpportunityId__r.Name ),
&quot;Claim&quot; , HYPERLINK(&quot;/&quot; &amp;   ClaimId__c ,   ClaimId__r.Name ),
&quot;Household&quot; , HYPERLINK(&quot;/&quot; &amp; SecondaryAccountId__c , SecondaryAccountId__r.Name ),
&quot;&quot;)</formula>
    <label>Identifier</label>
    <type>Text</type>
</CustomField>