force-app/zurich-base/main/default/objects/Relationship__c/fields/InfoRelationNumber__c.field-meta.xml
<CustomField>
    <fullName>InfoRelationNumber__c</fullName>
    <description>(OCS) Identificador único externo en INFO</description>
    <externalId>true</externalId>
    <label>INFO Relation Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>