force-app/zurich-base/main/default/objects/Relationship__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(OCS) Identifica la Oferta</description>
    <label>Offer</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>