force-app/zurich-base/main/default/objects/Relationship__c/fields/PolicyId__c.field-meta.xml
<CustomField>
    <fullName>PolicyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(OCS) Identifica la Póliza</description>
    <label>Policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>