force-app/zurich-base/main/default/objects/Relationship__c/fields/PrimaryAccountId__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(OCS) Identifica la cuenta principal en todas la relaciones</description>
    <label>PrimaryAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>