force-app/zurich-base/main/default/objects/Relationship__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>(OCS) Identifica el rol de la relación. Depende de Type__c</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABG</fullName>
            </value>
            <value>
                <fullName>ABU</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>ASC</fullName>
            </value>
            <value>
                <fullName>ASE</fullName>
            </value>
            <value>
                <fullName>ASG</fullName>
            </value>
            <value>
                <fullName>ASR</fullName>
            </value>
            <value>
                <fullName>BEN</fullName>
            </value>
            <value>
                <fullName>BER</fullName>
            </value>
            <value>
                <fullName>BRK</fullName>
            </value>
            <value>
                <fullName>CAI</fullName>
            </value>
            <value>
                <fullName>CAS</fullName>
            </value>
            <value>
                <fullName>CAV</fullName>
            </value>
            <value>
                <fullName>CCN</fullName>
            </value>
            <value>
                <fullName>CCO</fullName>
            </value>
            <value>
                <fullName>CCR</fullName>
            </value>
            <value>
                <fullName>CID</fullName>
            </value>
            <value>
                <fullName>CLG</fullName>
            </value>
            <value>
                <fullName>CLI</fullName>
            </value>
            <value>
                <fullName>CLN</fullName>
            </value>
            <value>
                <fullName>CLP</fullName>
            </value>
            <value>
                <fullName>CNC</fullName>
            </value>
            <value>
                <fullName>CNS</fullName>
            </value>
            <value>
                <fullName>CNT</fullName>
            </value>
            <value>
                <fullName>COH</fullName>
            </value>
            <value>
                <fullName>CON</fullName>
            </value>
            <value>
                <fullName>COP</fullName>
            </value>
            <value>
                <fullName>COR</fullName>
            </value>
            <value>
                <fullName>COS</fullName>
            </value>
            <value>
                <fullName>COT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>