force-app/zurich-base/main/default/objects/Relationship__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scope</valueSetName>
    </valueSet>
</CustomField>