force-app/zurich-base/main/default/objects/Relationship__c/fields/SecondaryAccountId__c.field-meta.xml
<CustomField>
    <fullName>SecondaryAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(OCS) Identifica la segunda cuenta para las relaciones familiares / Household</description>
    <label>Secondary Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationships (SecondaryAccount)</relationshipLabel>
    <relationshipName>HouseholdRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>