force-app/zurich-base/main/default/objects/Relationship__c/recordTypes/Claim.recordType-meta.xml
<RecordType>
    <fullName>Claim</fullName>
    <active>true</active>
    <description>Identifica el tipo de relación: Siniestro</description>
    <label>Claim</label>
</RecordType>