force-app/zurich-base/main/default/objects/Relationship__c/recordTypes/Household.recordType-meta.xml
<RecordType>
    <fullName>Household</fullName>
    <active>true</active>
    <description>Identifica el tipo de relación: Relación familiar</description>
    <label>Household</label>
</RecordType>