force-app/zurich-base/main/default/objects/Relationship__c/recordTypes/Offer.recordType-meta.xml
<RecordType>
    <fullName>Offer</fullName>
    <active>true</active>
    <description>Identifica el tipo de relación: Oferta</description>
    <label>Offer</label>
</RecordType>