force-app/zurich-base/main/default/objects/Relationship__c/recordTypes/Policy.recordType-meta.xml
<RecordType>
    <fullName>Policy</fullName>
    <active>true</active>
    <description>Identifica el tipo de relación: Póliza</description>
    <label>Policy</label>
</RecordType>